Fix table display on mobile

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -59,6 +59,10 @@ th {
   padding-right: 10px;
 }
 
+.min-width {
+  min-width: 850px;
+}
+
 .comment_wrap {
 	width: 300px;
 	word-wrap: break-word;
